--- a/styles/styles.css
+++ b/styles/styles.css
@@ -775,6 +775,44 @@ footer img{
 .about-content p {
     line-height: 1.7;
 }
+/************** OVERLAYS *****************/
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex; /* começa escondida */
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* fica por cima de tudo */
+}
+.overlay-container {
+    background-color: white;
+    height: 80%;
+    width: 80%;
+    border-radius: 15px;
+}
+.close-overlay {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    width: 100%;
+    height: 40px;
+}
+.close-overlay-btn {
+    border-top-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    height: 40px;
+    width: 40px;
+}
+.close-overlay-btn:hover{
+    background-color: rgb(199, 61, 61);
+}
+
+
 @media (max-width:1200px){
     main{
         flex-direction:column;
