--- a/styles/styles.css
+++ b/styles/styles.css
@@ -784,16 +784,18 @@ footer img{
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6);
-    display: flex; /* começa escondida */
+    display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* fica por cima de tudo */
+    z-index: 1000;
 }
 .overlay-container {
+    display: flex;
     background-color: white;
     height: 80%;
-    width: 80%;
+    width:50%;
     border-radius: 15px;
+    flex-direction: column;
 }
 .close-overlay {
     display: flex;
@@ -811,6 +813,14 @@ footer img{
 .close-overlay-btn:hover{
     background-color: rgb(199, 61, 61);
 }
+
+/**TASK**/
+
+#add-task-btn{
+    display: none;
+}
+
+
 
 
 @media (max-width:1200px){
