--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,6 +150,7 @@ nav a.active{
     gap:1rem;
     justify-content:center;
     margin-bottom: 3vh;
+    margin-top: 20px;
 }
 
 .card{
@@ -721,11 +722,24 @@ footer img{
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     color: #fff;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     height: 35px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
-.specific-gym-exercices-division {
+.specific-gym-days-title-btn {
+    background-color: #0080ff;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 22px;
+}
+.specific-gym-days-title-btn img{
+    height: 100%;
+}
+.specific-gym-exercises-division {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -736,13 +750,13 @@ footer img{
     border-bottom: #cacaca 1px solid;
     margin: 10px;
 }
-.specific-gym-exercices-title{
+.specific-gym-exercises-title{
     font-size: large;
     padding-top: 10px;
     display: flex;
     justify-content: center;
 }
-.specific-gym-exercices {
+.specific-gym-exercises {
     min-height: 80%;
     display: flex;
     flex-direction: column;
@@ -822,13 +836,124 @@ footer img{
     background-color: rgb(199, 61, 61);
 }
 
-/**TASK**/
+.overlay-container-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: start;
+    align-items: center;
+    
+}
+
+/**TASKS**/
 
 #add-task-btn{
     display: none;
 }
 
+/**GYM**/
 
+#edit-workout-monday {
+    display: none;
+}
+
+#edit-workout-tuesday {
+    display: none;
+}
+
+#edit-workout-wednessday {
+    display: none;
+}
+
+#edit-workout-thursday {
+    display: none;
+}
+
+#edit-workout-friday {
+    display: none;
+}
+
+#edit-workout-saturday {
+    display: none;
+}
+
+#edit-workout-sunday {
+    display: none;
+}
+
+.overlay-container-content-gym-add {
+    height: 50px;
+    width: 50px;
+    border-radius: 50px;
+    border: 0;
+
+}
+.overlay-container-content-gym-add:hover {
+    border: solid #008e1a;
+}
+.overlay-container-content-gym-add img{
+    height: 100%;
+}
+
+.overlay-container-content-gym-exercises {
+    height: auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    
+}
+
+.overlay-container-content-gym-form {
+    min-height: 200px;
+    height: 400px;
+    margin: 20px;
+    width: 80%;
+    border: solid #cacaca 1px;
+    overflow-y: auto;
+    padding-bottom: 20px;
+}
+.overlay-container-content-gym-exercises button img {
+    height: 100%;
+}
+.overlay-container-content-gym-exercises button {
+    height: 30px;
+    border-radius: 50px;
+    border: 0;
+    margin-left: 10px;
+}
+.overlay-container-content-gym-exercises button:hover {
+    border: solid #008e1a;
+}
+
+.gym-sets {
+    border-radius: 5px;
+    border: solid #000000 1px;
+    width: 50px;
+    height: 30px;
+    margin-right: 5px;
+    padding-left: 5px;
+    
+}
+.gym-reps {
+    border-radius: 5px;
+    border: solid #000000 1px;
+    width: 50px;
+    height: 30px;
+    margin-left: 5px;
+    padding-left: 5px;
+}
+.gym-exercise {
+    border-radius: 5px;
+    border: solid #000000 1px;
+    width: 200px;
+    height: 30px;
+    margin-left: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
 
 
 @media (max-width:1200px){
