--- a/styles/styles.css
+++ b/styles/styles.css
@@ -667,13 +667,14 @@ footer img{
 
 #finance-duties {
     width: 60%;
-    max-height: 700px;
+    height: 700px;
     overflow-y: auto;
     overflow-x: hidden;
 }
 .finance-duties-self {
     display: flex;
-    gap: 7px
+    gap: 7px;
+    margin-top: 20px;
 }
 /************** TASKS *****************/
 .specific-tasks {
@@ -888,6 +889,41 @@ footer img{
     align-items: center;
     justify-content: center;
 }
+/************** USER *****************/
+.user-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    gap: 50px;
+    margin-top: 50px;
+}
+.user-content div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+.user-input {
+    width: 400px;
+    height: 50px;
+    text-align: center;
+    border-radius: 7px;
+    border: solid 1px #9c9c9c;
+    font-size: large;
+}
+#btn-logout {
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    border-radius: 7px;
+    border: solid 1px #500f0f;
+    background-color: #c32323;
+    font-size: large;
+    color: white;
+    margin-top:80px ;
+}
 /************** ABOUT *****************/
 .about {  
     display: flex;
@@ -949,7 +985,7 @@ footer img{
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     height: 40px;
-    width: 40px;
+    max-width: 40px;
     border: solid 1px;
 }
 .close-overlay-btn:hover{
@@ -973,13 +1009,6 @@ footer img{
     width: 95%;
     display: flex;
     justify-content: end;
-}
-
-
-/**TASKS**/
-
-#add-task-btn{
-    display: none;
 }
 
 /**GYM**/
@@ -1225,21 +1254,26 @@ footer img{
     background-color: #eded79;
 }
 /*****TASKS*****/
+#add-task-btn{
+    display: none;
+}
 .task-overlay-add-content {
     display: flex;
     flex-direction: column;
-    height: 100%;
     width: 100%;
     align-items: center;
     justify-content: start;
     gap: 30px;
-    margin-top: 50px;
+    margin-top: 10px;
+    padding-bottom: 50px;
+    overflow-y: auto;
+
 }
-.task-overlay-add-content input{ 
+.task-overlay-add-content input, .task-overlay-add-content select{ 
     border-radius: 5px;
     border: solid #b2b2b2 1px;
     width: 300px;
-    height: 30px;
+    min-height: 30px;
     margin-left: 10px;
     padding-left: 5px;
     padding-right: 5px;
@@ -1250,7 +1284,7 @@ footer img{
     border-radius: 5px;
     border: solid #b2b2b2 1px;
     width: 300px;
-    height: 100px;
+    min-height: 100px;
     padding: 7px;
 }
 .task-overlay-content-time {
@@ -1287,172 +1321,6 @@ footer img{
     padding-right: 5px;
     text-align: center;
     margin: 0;
-}
-
-/********************* CALENDAR ****************************/
-.date-input {
-    border-radius: 5px;
-    border: solid #b2b2b2 1px;
-    width: 200px;
-    height: 30px;
-    margin-left: 10px;
-    padding-left: 5px;
-    padding-right: 5px;
-    text-align: center;
-    
-}
-
-.datepicker-container {
-    display: flex; 
-    flex-direction: column;
-    position: relative;
-    width: fit-content; 
-    align-items: center; 
-    width: 400px;
-}
-
-.datepicker {
-    flex: none !important; 
-    align-self: flex-start; 
-    
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1000;
-    margin-top: 8px;
-    background: #fff;
-    padding: 15px;
-    border-radius: 8px;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    
-    width: 100% !important; 
-    min-width: 320px !important;
-    box-sizing: border-box;
-}
-
-.datepicker-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-bottom: 15px;
-    gap: 5px;
-}
-
-.datepicker-header select,
-.datepicker-header input {
-  font-size: 14px;
-  border: 1px solid #eee;
-  outline-color: var(--dark);
-}
-
-.datepicker button {
-  cursor: pointer;
-  border: none;
-  border-radius: 3px;
-  background: transparent;
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: uppercase;
-  touch-action: manipulation;
-}
-
-.datepicker-header input {
-  max-width: 64px;
-}
-
-.datepicker-header button {
-  color: slategray;
-}
-
-.datepicker-header button:hover {
-  color: var(--dark);
-}
-
-.days, .dates {
-    display: grid;
-    grid-template-columns: repeat(7, 40px) !important; 
-    gap: 5px;
-    justify-content: center;
-}
-
-.days span {
-    width: 40px;
-    text-align: center;
-    font-size: 12px;
-    font-weight: bold;
-    color: #888;
-}
-
-
-.dates button {
-    width: 40px !important;
-    height: 40px !important;
-    min-width: 40px !important;
-    min-height: 40px !important;
-    
-    padding: 0 !important;
-    border: none;
-    background: transparent;
-    border-radius: 6px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    transition: 0.2s;
-}
-
-.dates button:hover:not(:disabled) {
-    background: #d5d4db;
-}
-
-.dates button.today {
-    color: var(--dark);
-    font-weight: bold;
-    border: 1px solid rgba(73, 75, 109, 0.5);
-
-}
-
-.dates button.selected {
-    background: var(--dark) !important;
-    color: #fff !important;
-}
-
-.dates button:disabled {
-    opacity: 0.3;
-    cursor: default;
-}
-
-.datepicker-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    gap: 10px;
-    margin-top: 15px;
-    padding-top: 10px;
-    border-top: 1px solid #eee;
-}
-
-.datepicker-footer button {
-    flex: none !important; 
-    padding: 8px 16px;
-    border-radius: 4px;
-    font-size: 13px;
-    font-weight: 600;
-}
-.datepicker-footer button:hover {
-    background-color: #eeeeee;
-}
-
-.datepicker-footer .apply {
-    background: var(--dark);
-    color: white;
-}
-.datepicker-footer .apply:hover {
-    background: var(--dark);
-    color: white;
 }
 
 @media (max-width:1200px){
